--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
   </head>
   <body>
     <div class="book">
-      <audio
-        id="backgroundMusic"
-        src="Komang - Raim Laode ( Official Lirik )_d-vk4Yk14xI.mp3"
-        autoplay
-        loop
-      ></audio>
+      <audio id="backgroundMusic" src="Komang - Raim Laode ( Official Lirik )_d-vk4Yk14xI.mp3"></audio>
       <div class="cover">
         <h1>Buku Cerita Kita</h1>
         <p>Untuk Kamu, Sayangku</p>
