--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               <img src="3.jpg" alt="Foto Kenangan Kita 3" class="story-image" />
             </div>
             <button onclick="nextPage(2)">Note Berikutnya</button>
+            <button onclick="startMusic()">Play Music</button>
           </div>
         </div>
 
